# ptr89

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  build.sh  debian.control  debian.dsc  ptr89.dsc  ptr89.rb  ptr89.spec
.github/workflows/: ci.yml
cmake/: Toolchain-x86_64-w64-mingw32.cmake
debian/: changelog  rules
lib/: ptr89.h
lib/src/: Parser.cpp  Parser.h  Pattern.cpp  Pattern.h  Tokenizer.cpp  Tokenizer.h  utils.cpp  utils.h
obs/: PKGBUILD  ptr89.spec
src/: main.cpp  main.h  tests.cpp
tools/: build_deb.sh  build_tar.sh  build_wasm.sh  build_win.sh
